--- a/site/todo.txt
+++ b/site/todo.txt
@@ -1,87 +1,8 @@
-- Figure out how to link an external CSS file to layout
-- Figure out how to center align the socials
-- Make the method for spacing less jank
-- Add Alex's functionality to the page
-- Add to the about page (circle with images)
 - ensure how everything will operate based of size of screen (need to change that stuff)
-- style card imgs into circles
+- style card imgs into circles (if you want)
 - (home) put <hr> with underline for emphasis
 - See profile will expand a textbox on the screen with the full info
-
-
-<div class="container">
-    <ul class="social">
-            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-            <li><a href="mailto:ameyapg2@illinois.edu" target="_blank"><i class="fas fa-envelope"></i></a></li>
-            <li><a href="https://github.com/ameyagh" target="_blank"><i class="fab fa-github"></i></a></li>
-            <li><a href="https://pinterest.com" target="_blank"><i class="fab fa-pinterest"></i></a></li>
-    </ul>
-</div>
-
-
-<h1 class="hp"><strong>DARS Report Analysis</strong></h1>
-    <div class="container">
-        <div class="mt-xl-5">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                <!-- <span class="input-group-text" id="inputGroupFileAddon01">Upload</span> -->
-                </div>
-                    <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
-                    <label class="custom-file-label" for="inputGroupFile01"></label>
-                </div>
-            </div>
-        </div>
-    </div>
-
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- allows the html to scale according to the device that you are using -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-- home method
-# can adds some vars when you get to the pt
-    # if request.method == 'POST':
-    #     pdf = request.files['file']
-
-    #     # TODO: MAKE THIS A FLASH USING BOOTSTRAP TO TELL USER TO INPUT SOMETHING VALID YOU FEEL
-    #     # redirect back to the homescreen
-    #     # if pdf.filename == '':
-    #     #     flash()
-
-    #     # TODO: MAKE THIS A FLASH USING BOOTSTRAP TO TELL USER TO INPUT SOMETHING VALID YOU FEEL
-    #     # redirect back to the homescreen
-    #     # if not check_file(pdf.filename):
-    #     #     flash()
-    #     # return render_template('home_vis.html', content=content)
-    #     return render_template('home.html')
-    # else:
-    #     return render_template('home.html')
-
-- about method
-# return render_template('about.html', title='About')
-
 - Jumbotron = can change back to fluid if you want it to span the entire page
+- fix success flash
 
 
-- stuff with cols/rows
-<!-- Columns need to add up to 12 -->
-        <!-- Justify content center/around/between will center columns that don't add up to 12 -->
-        <!-- offset-{amt} allows you to offset the col -->
-        <div class="container my-container">
-            <div class="row justify-content-center my-row">
-                <div class="col-md my-col">
-                    HEY
-                </div>
-            </div>
-            <div class="row justify-content-center align-items-stretch my-row">
-                <div class="col-md-8 col-sm-6 align-self-start order-md-12 my-col">
-                    LOL
-                </div>
-                <div class="col-md-4 col-sm-6 order-md-2 my-col">
-                    Ameya
-                </div>
-            </div>
-        </div>
