changes to d3 code and site

--- a/site/todo.txt
+++ b/site/todo.txt
@@ -1,41 +1,9 @@
 - ensure how everything will operate based of size of screen (need to change that stuff)
-- style card imgs into circles (if you want)
-- (home) put <hr> with underline for emphasis
 - See profile will expand a textbox on the screen with the full info
 - Jumbotron = can change back to fluid if you want it to span the entire page
 - fix success flash
 - fix the issue with multiple flashing
-- Write driver class figure out how to pull necessary stuff
-- Work on sending necessary data to javascript
 - Work on d3.js bargraph implemenation
-
-
-
-# import json
-# from course import course
-# import os
-# import minor
-# import minor_parser
-
-# # serializes the DARS report and the minor data into json files
-# def create_json(courses : list, minors=None, minor=False):
-
-#     # can use same function for creating JSON files for minors/DARS reports
-#     if not minor and minors is None:
-#         with open('sample.json', 'w') as outfile:
-#             json.dump([o.dump() for o in courses], outfile, indent=4)
-#     else:
-#         minor_to_json(minors)
-
-# # serialize a list of minors into a json file
-# def minor_to_json(minors : list):
-#     with open('minor_data.json', 'w') as outfile:
-#         json.dump([m.dump() for m in minors], outfile, indent=4)
-        
-
-
-# # minors = minor_parser.create_minor_list('minor_data/minor_data.csv')
-# # minor_to_json(minors)
-# # print(minors[len(minors) - 1])
-
-
+- Style the titles/labels to look way nicer overall
+- Get the Jumbotron right/finish the about page
+- Valid Checking
